infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: mhdbilal/auth-service
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusip-srv
spec:
  selector:
    app: auth-service
  ports:
    - name: auth-service
      protocol: TCP
      port: 3001
      targetPort: 3001
