infra/k8s/product-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-srv
spec:
  type: NodePort
  selector:
    app: product-service
  ports:
    - name: product-service
      protocol: TCP
      port: 3002
      targetPort: 3002
