infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: productecom.dev
      http:
        paths:
          - path: /product/checkout/?(.*)
            pathType: Prefix
            backend:
              service:
                name: product-clusip-srv
                port:
                  number: 3002                  
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-clusip-srv
                port:
                  number: 3001
